--- a/car-plate-frontend/package.json
+++ b/car-plate-frontend/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "cors": "^2.8.5",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
